swap py to opt